@@ -1,3 +1,8 @@
+2009-03-24  Akira TAGOH  <tagoh@redhat.com>
+
+	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): avoid
+	a segfault if invalid ic is given.
+
 2009-03-14  Akira TAGOH  <tagoh@redhat.com>
 
 	* backends/xim/compose.c (sequence_lookup): correct masking modifiers.
